Clean up TOC styles and fix bugs
 - Clean up unused TOC styles
 - Fix bug in sticky TOC where if you scrolled down to the bottom to
   make it sticky, then reduce your viewport width to mobile, the TOC
would disappear.
 - Fix empty TOC covering header on a path without any TOC

See
https://gitlab.com/gitlab-com/gitlab-docs/merge_requests/182#note_57833460

--- a/content/assets/stylesheets/stylesheet.scss
+++ b/content/assets/stylesheets/stylesheet.scss
@@ -258,10 +258,6 @@ h6 {
   .breadcrumbs {
     font-style: italic;
 
-    li {
-      margin-top: 20px;
-    }
-
     .last-updated {
       color: $color-light-gray;
       font-size: 13px;
@@ -270,6 +266,7 @@ h6 {
 }
 
 .header {
+  z-index: 1;
   background: $main-background-color;
   position: relative;
   width: 100%;
