--- a/content/assets/stylesheets/toc.scss
+++ b/content/assets/stylesheets/toc.scss
@@ -4,8 +4,22 @@ version: 2
 
 @import "variables";
 
+.clear {
+  clear: both;
+}
+
+.doc-nav {
+  h4 {
+    padding-bottom: 5px;
+  }
+
+  li > a {
+    font-size: 14px;
+  }
+}
+
 // ToC styles
-.breadcrumbs + ul, .doc-nav > ul, .quick-nav ul {
+.doc-nav > ul {
   background: $body-background-color;
   padding: 20px;
   margin-top: 60px;
@@ -20,29 +34,8 @@ version: 2
   }
 }
 
-.doc-nav, .quick-nav {
-  h4 {
-    padding-bottom: 5px;
-  }
-
-  li > a {
-    font-size: 14px;
-  }
-}
-
-.clear {
-  clear: both;
-}
-
 // not wide enough to show quick nav and toc
 @media(max-width:1099px) {
-  .doc-nav {
-    margin: 0 auto;
-    background: $white;
-    width: inherit;
-    max-width: 900px;
-  }
-
   .doc-nav > ul {
     margin: 0;
   }
@@ -52,10 +45,6 @@ version: 2
     width: inherit;
     margin: 0 auto;
     max-width: 900px;
-  }
-
-  .quick-nav {
-    display: none;
   }
 }
 
@@ -78,65 +67,46 @@ version: 2
     right: 0;
     padding-top: 55px;
     overflow-y: scroll;
-    height: 100%;
+    height: 100vh;
+  }
+
+  .doc-nav-bottom-touching {
+    position: absolute;
   }
 
   .doc-nav ul ul {
     padding-left: 25px;
   }
-
-  .doc-nav > ul .quick-nav ul {
-    margin: 0;
-  }
-
-  .doc-nav, .quick-nav {
-    width: 25%;
-  }
 }
 
 @media(min-width:1100px) and (max-width:1600px) {
-  .quick-nav {
-    display: none;
+  .main.class.has-toc {
+    width: 70vw;
+    max-width: 70vw;
+    float: left;
   }
 
   .doc-nav {
-    width: 30%;
-    max-width: 30%;
+    width: 30vw;
+    max-width: 30vw;
   }
-
-  .main.class.has-toc {
-    width: 70%;
-    max-width: 70%;
-    float: left;
+  .doc-nav-bottom-touching {
+    right: -30vw;
   }
 }
 
 // wide enough to show quick nav and toc
 @media(min-width:1601px) {
   .main.class.has-toc {
-    width: 50%;
-    margin-left: 25%;
-    max-width: 50%;
+    width: 50vw;
+    max-width: 50vw;
+    margin-left: 25vw;
   }
 
-  .quick-nav {
-    position: fixed;
-    top: 0;
-    padding-top: 55px;
-    left: 0;
-    overflow-y: scroll;
-    height: 100%;
+  .doc-nav {
+    width: 25vw;
   }
-
-  .quick-nav ul ul {
-    padding-bottom: 0;
-  }
-
-  .quick-nav h4 {
-    margin-top: 25px;
-  }
-
-  .quick-nav h4:first-child {
-    margin-top: 10px;
+  .doc-nav-bottom-touching {
+    right: -25vw;
   }
 }
